k8s/javelin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javelin
  namespace: ccs-dev
  labels:
    app.kubernetes.io/name: javelin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: javelin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: javelin
    spec:
      serviceAccountName: ccs-assume-role-isc
      containers:
      - name: javelin
        image: 559616336583.dkr.ecr.ap-northeast-2.amazonaws.com/javelin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "300m"
            memory: "1024Mi"
          limits:
            cpu: "1000m"
            memory: "2048Mi"        
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: javelin
  name: javelin
  namespace: ccs-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: javelin
  sessionAffinity: None
  type: ClusterIP
